--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,5 @@
 body {
     background-image: url(./images/food.png);
     background-size: repeat;
-    background-color: darkgoldenrod
+    background-color: skyblue;
 }
