--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,11 @@ h1 {
 
 @media only screen and (max-width: 1000px) {
 
-   h1 {
+    body {
+        padding-top: 20px;
+    }
+
+    h1 {
         font-size: 3rem;
-        margin-bottom: 0;
-   }
+    }
 }
